--- a/index.html
+++ b/index.html
@@ -4,3 +4,6 @@ layout: basic
 type: basic
 ---
 
+<p class="introduction">
+	Welcome to the homepage of FNOB (Free and Open Books Project). Join us and be an author or reviewer.
+</p>
